--- a/app/views/pages/apartment.html.erb
+++ b/app/views/pages/apartment.html.erb
@@ -1,5 +1,1 @@
-<%= react_component("Apartment", {
-    logged_in: user_signed_in?,
-    sign_in_route: new_user_session_path,
-    sign_out_route: destroy_user_session_path
-}) %>
+<h1>Testing</h1>
